--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,9 +1,178 @@
-.wrap {
-  padding: 20px;
+%list-unstyled {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+%d-flex {
+  display: flex;
+}
+
+%f-wrap {
+  flex-wrap: wrap;
+}
+
+%ac-flex-start {
+  align-content: flex-start;
+}
+
+.kva {
+  &-slider {
+    width: 100%;
+
+    &-display {
+      position: relative;
+      padding-top: 54%;
+      width: 100%;
+      overflow: hidden;
+    }
+
+    &-list {
+      @extend %d-flex;
+      @extend %list-unstyled;
+      box-sizing: border-box;
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      transition: left 0.8s;
+    }
+
+    &-item {
+      position: relative;
+    }
+  }
+
+  &-pagination {
+    $this: &;
+    @extend %d-flex;
+    @extend %f-wrap;
+    @extend %ac-flex-start;
+    @extend %list-unstyled;
+    justify-content: center;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+
+    &-item {
+      &.active {
+        & > button {
+          background-color: #00f;
+        }
+      }
+    }
+
+    &-btn {
+      display: inline-block;
+      padding: 8px;
+      margin: 10px;
+      border: 1px solid #333333;
+      border-radius: 50%;
+      background-color: #fff;
+    }
+  }
+
+  &-miniature {
+    @extend %d-flex;
+    @extend %f-wrap;
+    @extend %ac-flex-start;
+    @extend %list-unstyled;
+
+    &-item {
+      opacity: 0.6;
+      transition: opacity 0.8s;
+      &.active {
+        opacity: 1;
+      }
+    }
+
+    &-btn {
+      width: 50px;
+      height: 50px;
+
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+  }
+
+  &-btn {
+    &-prev,
+    &-next {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      width: 42px;
+      height: 42px;
+      padding: 0;
+      border: 0;
+      background-color: rgba(#fff, 0.6);
+      cursor: pointer;
+      &:before {
+        content: "";
+        position: absolute;
+        top: 25%;
+        width: 50%;
+        height: 50%;
+        color: #fff;
+        border-top: 2px solid;
+        border-left: 2px solid;
+      }
+    }
+    &-prev {
+      left: 0;
+      &:before {
+        left: 35%;
+        transform: rotate(-45deg);
+      }
+    }
+    &-next {
+      right: 0;
+      &:before {
+        right: 35%;
+        transform: rotate(135deg);
+      }
+    }
+  }
+}
+
+.no-transition {
+  transition: all 0s;
+}
+
+.slide-content {
+  color: #fff;
+  padding: 32px 42px;
+  box-sizing: border-box;
+}
+
+.img-cover {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.full-absolute {
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
   margin: auto;
 }
-@media screen and ( min-width:800px ) {
-  .wrap {
-    width: 60%;
-  }
+
+
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
+
+.hidden {
+  display: none;
 }
